--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 class="flex-grow-1">Ansgar Reimann</h1>
             <ul class="nav nav-pills ustify-content-end">
                 <li class="nav-item">
-                    <a class="nav-link active bg-dark text-white"
+                    <a class="nav-link active bg-dark text-white shadow"
                         href="http://127.0.0.1:5500/index.html#home">Home</a>
                 </li>
                 <li class="nav-item">
@@ -27,58 +27,67 @@
             </ul>
         </header>
         <div class="row">
-            <div class="col-sm">
-                <section id="start" class="mb-3">
-                    <img class="mb-3 ml-5 img-fluid"
-                        style="max-width:
-                        80%"
-                        src="https://uonnya.sn.files.1drv.com/y4mOi2pzsUlKByyB1nbRfkLwnZcM7e5HLwuymgGs0mE_-71A9u-ArCY-L5R2l04CQfakPDOKw7C2Eg83-OIbnU9rzizAi0bkgraSL4QDHT0K83Vi2N0rM8kOy2iScsm1XQuZgW_nieQFESAulPgnaTZcUoj0x7UJ6Dg4R77GBOC2lPdY02a9qLvQBD618JxarxRKoKi5XuLEbdtBs2WPQgrgw?width=1024&height=682&cropmode=none"
-                        alt="Bild
-                        von mir">
-                    <p class="text-justify">Lorem ipsum dolor sit amet
-                        consectetur, adipisicing elit.
-                        Animi
-                        nulla mollitia obcaecati consequuntur aliquam commodi
-                        delectus!
-                        Ab eaque reiciendis ratione vel voluptas, natus nulla
-                        consequuntur delectus sunt, neque numquam soluta?</p>
-                </section>
-            </div>
+            <section id="start" class="col-sm mb-3">
+                <img class="mb-3 img-fluid"
+                    src="https://uonnya.sn.files.1drv.com/y4mOi2pzsUlKByyB1nbRfkLwnZcM7e5HLwuymgGs0mE_-71A9u-ArCY-L5R2l04CQfakPDOKw7C2Eg83-OIbnU9rzizAi0bkgraSL4QDHT0K83Vi2N0rM8kOy2iScsm1XQuZgW_nieQFESAulPgnaTZcUoj0x7UJ6Dg4R77GBOC2lPdY02a9qLvQBD618JxarxRKoKi5XuLEbdtBs2WPQgrgw?width=1024&height=682&cropmode=none"
+                    alt="Bild
+                    von mir">
+                <p class="text-justify">Lorem ipsum dolor sit amet
+                    consectetur, adipisicing elit.
+                    Animi
+                    nulla mollitia obcaecati consequuntur aliquam commodi
+                    delectus!
+                    Ab eaque reiciendis ratione vel voluptas, natus nulla
+                    consequuntur delectus sunt, neque numquam soluta?</p>
+            </section>
             <!--durch row ist es nicht gleich eingerückt wie rest deshalb ml-2-->
             <div class="col-sm">
                 <h2 id="skills1">Programmierskills</h2>
                 <list class="ml-2 mb-3 d-flex">
                     <ul class="row list-group d-flex
                         list-group-horizontal">
-                        <li class="badge list-inline-item
+                        <li class="shadow-lg badge list-inline-item
                             list-group-item-dark text- m-1">Markdown</li>
-                        <li class="badge list-inline-item
+                        <li class="shadow-lg badge list-inline-item
                             list-group-item-dark text- m-1">Shell</li>
-                        <li class="badge list-inline-item
+                        <li class="shadow-lg badge list-inline-item
                             list-group-item-dark text- m-1">HTML</li>
-                        <li class="badge list-inline-item
+                        <li class="shadow-lg badge list-inline-item
                             list-group-item-dark text- m-1">Bootstrap</li>
+                        <li class="shadow-lg badge list-inline-item
+                            list-group-item-dark text- m-1">Soon: CSS/SCSS</li>
+                        <li class="shadow-lg badge list-inline-item
+                            list-group-item-dark text- m-1">Soon: JavaScript</li>
+                        <li class="shadow-lg badge list-inline-item
+                            list-group-item-dark text- m-1">Soon: React</li>
                     </ul>
                 </list>
                 <h2 id="skills2">Interessen</h2>
                 <list class="ml-2 mb-3 d-flex">
                     <ul class="row class list-group
                         list-group-horizontal">
-                        <li class="badge list-inline-item
-                            list-group-item-light m-1">Familie</li>
-                        <li class="badge list-inline-item
-                            list-group-item-light m-1">Sport</li>
-                        <li class="badge list-inline-item
+                        <li class="shadow-lg badge list-inline-item
+                            list-group-item-light m-1">Meine Familie</li>
+                        <li class="shadow-lg badge list-inline-item
+                            list-group-item-light m-1">Fußball</li>
+                        <li class="shadow-lg badge list-inline-item
+                            list-group-item-light m-1">Fahrrad fahren</li>
+                        <li class="shadow-lg badge list-inline-item
+                            list-group-item-light m-1">Ski fahren</li>
+                        <li class="shadow-lg badge list-inline-item
+                            list-group-item-light m-1">Klettern</li>
+                        <li class="shadow-lg badge list-inline-item
                             list-group-item-light m-1">Programmieren</li>
-                        <li class="badge list-inline-item
+                        <li class="shadow-lg badge list-inline-item
                             list-group-item-light m-1">Technik</li>
-                        <li class="badge list-inline-item
+                        <li class="shadow-lg badge list-inline-item
                             list-group-item-light m-1">Videospiele</li>
                     </ul>
                 </list>
             </div>
         </div>
-        <section id="contact" class="mr-md-5 ml-md-5 border bg-secondary
+        <section id="contact" class="shadow-lg mr-md-5 ml-md-5 border
+            bg-secondary
             border-dark rounded
             p-3
             mb-3">
@@ -139,54 +148,49 @@
                 </section>
             </div>
             <div class="col-sm">
-                <h2 id="cv">Curriculum Vitae</h2>
+                <h2 id="cv">Lebenslauf</h2>
                 <list>
                     <ul class="list-group list-group-flush mb-3">
-                        <li class="bg-danger list-group-item">Station 1</li>
-                        <li class="list-group-item">Station 2</li>
-                        <li class="list-group-item">Station 3</li>
-                        <li class="list-group-item">Station 4</li>
-                        <li class="list-group-item">Station 5</li>
+                        <li class="shadow-lg list-group-item"><small>
+                                <b>Januar 2019 - März 2019</b> <br>Zeit mit der
+                                Familie
+                                verbringen
+                            </small></li>
+                        <li class="shadow-lg list-group-item
+                            list-group-item-dark"><small>
+                                <b>April 2018 - Dezember 2018</b> <br>E-Commerce
+                                Manager
+                                Fon3 GmbH
+                            </small></li>
+                        <li class="shadow-lg list-group-item"><small>
+                                <b>Februar 2018 - April 2018</b> <br>Arbeit
+                                suchend
+                            </small></li>
+                        <li class="shadow-lg list-group-item
+                            list-group-item-dark"><small>
+                                <b>November 2015 - Januar 2018</b> <br>E-Commerce
+                                Manager
+                                Genuine Peak Sarl
+                            </small></li>
+                        <li class="shadow-lg list-group-item"><small>
+                                <b>April 2015 - November 2015</b> <br>Nachwuchsscout
+                                1. FC Kaiserslautern GmbH & Co. KGaA
+                            </small></li>
+                        <li class="shadow-lg list-group-item
+                            list-group-item-dark"><small>
+                                <b>Oktober 2014 - Oktober 2015</b> <br>Plattform
+                                Manager DAW/DTW Logstocks GmbH
+                            </small></li>
+                        <li class="shadow-lg list-group-item"><small>
+                                <b>Oktober 2011 - März 2015</b> <br>Trainer
+                                Nachwuchsleistungszentrum 1. FC Kaiserslautern
+                                GmbH & Co. KGaA
+                            </small></li>
                     </ul>
                 </list>
             </div>
         </div>
         <hr>
-        <p>
-            <a class="btn btn-primary" data-toggle="collapse"
-                href="#multiCollapseExample1" role="button"
-                aria-expanded="false" aria-controls="multiCollapseExample1">Toggle
-                first element</a>
-            <button class="btn btn-primary" type="button" data-toggle="collapse"
-                data-target="#multiCollapseExample2" aria-expanded="false"
-                aria-controls="multiCollapseExample2">Toggle second element</button>
-            <button class="btn btn-primary" type="button" data-toggle="collapse"
-                data-target=".multi-collapse" aria-expanded="false"
-                aria-controls="multiCollapseExample1 multiCollapseExample2">Toggle
-                both elements</button>
-        </p>
-        <div class="row">
-            <div class="col">
-                <div class="collapse multi-collapse" id="multiCollapseExample1">
-                    <div class="card card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high
-                        life accusamus terry richardson ad squid. Nihil anim
-                        keffiyeh helvetica, craft beer labore wes anderson cred
-                        nesciunt sapiente ea proident.
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="collapse multi-collapse" id="multiCollapseExample2">
-                    <div class="card card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high
-                        life accusamus terry richardson ad squid. Nihil anim
-                        keffiyeh helvetica, craft beer labore wes anderson cred
-                        nesciunt sapiente ea proident.
-                    </div>
-                </div>
-            </div>
-        </div>
         <footer class="font-weight-light"><small>&copy; 2019 AnsMann</small></footer>
     </body>
 </html>
