--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </section>
             </div>
             <div class="col-sm">
-                <h2 id="cv">Lebenslauf</h2>
+                <h2 id="cv">Berufliche Laufbahn</h2>
                 <list>
                     <ul class="list-group list-group-flush mb-3">
                         <li class="shadow-lg list-group-item"><small>
@@ -185,6 +185,34 @@
                                 <b>Oktober 2011 - März 2015</b> <br>Trainer
                                 Nachwuchsleistungszentrum 1. FC Kaiserslautern
                                 GmbH & Co. KGaA
+                            </small></li>
+                    </ul>
+                </list>
+                <h2 id="cv">Akademische Laufbahn</h2>
+                <list>
+                    <ul class="list-group list-group-flush mb-3">
+                        <li class="shadow-lg list-group-item"><small>
+                                <b>April 2015 - November 2015</b> <br>TU
+                                Darmstadt: Master of Arts Sportmanagement o.
+                                Abschluss
+                            </small></li>
+                        <li class="shadow-lg list-group-item
+                            list-group-item-dark"><small>
+                                <b>März 2016</b> <br>Veröffentlichung: Journal
+                                of
+                                Sport Sciences, Volume 35, 2017
+                            </small></li>
+                        <li class="shadow-lg list-group-item"><small>
+                                <b>April 2008 - Oktober 2014</b> <br>TU
+                                Kaiserslautern: Bachelor & Master of
+                                Education
+                                Sport/Sozialkunde/Bildungswissenschaften
+                            </small></li>
+                        <li class="shadow-lg list-group-item
+                            list-group-item-dark"><small>
+                                <b>April 2007 - März 2008</b> <br>TU
+                                Kaiserslautern: Bachelor of Science
+                                Informatik o. Abschluss
                             </small></li>
                     </ul>
                 </list>
