--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
                     src="https://uonnya.sn.files.1drv.com/y4mOi2pzsUlKByyB1nbRfkLwnZcM7e5HLwuymgGs0mE_-71A9u-ArCY-L5R2l04CQfakPDOKw7C2Eg83-OIbnU9rzizAi0bkgraSL4QDHT0K83Vi2N0rM8kOy2iScsm1XQuZgW_nieQFESAulPgnaTZcUoj0x7UJ6Dg4R77GBOC2lPdY02a9qLvQBD618JxarxRKoKi5XuLEbdtBs2WPQgrgw?width=1024&height=682&cropmode=none"
                     alt="Bild
                     von mir">
-                <p class="text-justify">Lorem ipsum dolor sit amet
-                    consectetur, adipisicing elit.
-                    Animi
-                    nulla mollitia obcaecati consequuntur aliquam commodi
-                    delectus!
-                    Ab eaque reiciendis ratione vel voluptas, natus nulla
-                    consequuntur delectus sunt, neque numquam soluta?</p>
+                <h4>Hallo und Moin</h4>
+                <p class="text-justify">Als Neu-Hamburger und neuer Fisch
+                    begrüße
+                    ich euch auf meiner ersten eigenen Seite. Es lohnt sich
+                    öfter
+                    vorbei zu sehen, da ich die Seite mit Fortschreiten meines
+                    Web Developer Kurses weiterentwickeln werde. Viel Spaß
+                    beim
+                    stöbern!</p>
             </section>
             <!--durch row ist es nicht gleich eingerückt wie rest deshalb ml-2-->
             <div class="col-sm">
@@ -106,6 +108,13 @@
         <header class="h3 d-flex justify-content-center">Finde me on</header>
         <section id="teaser" class="d-flex justify-content-around row
             mb-3 p-3">
+            <figure><a href="https://codepen.io/ansmann/"><img class="mb-1"
+                        src="codepen-logo.png"
+                        alt="Codepen logo" style="max-width: 120px"></a>
+                <figcaption class="d-flex justify-content-center"><a
+                        class="text-dark"
+                        href="https://codepen.io/ansmann/">CodePen</a></figcaption>
+            </figure>
             <figure>
                 <a href="https://github.com/AnsMann/"><img class="mb-1"
                         src="GitHub-Mark-120px-plus.png"
@@ -113,13 +122,6 @@
                 <figcaption class="d-flex justify-content-center"><a
                         class="text-dark"
                         href="https://github.com/AnsMann/">GitHub</a></figcaption>
-            </figure>
-            <figure><a href="https://codepen.io/ansmann/"><img class="mb-1"
-                        src="codepen-logo.png"
-                        alt="Codepen logo" style="max-width: 120px"></a>
-                <figcaption class="d-flex justify-content-center"><a
-                        class="text-dark"
-                        href="https://codepen.io/ansmann/">CodePen</a></figcaption>
             </figure>
             <figure><a href="https://www.xing.com/profile/Ansgar_Reimann"><img
                         class="mb-1"
@@ -134,23 +136,75 @@
             <div class="col-sm">
                 <h2 id="aboutme">About me</h2>
                 <section class="mb-3">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit.
-                        Commodi
-                        magnam consequatur enim voluptates aliquam magni
-                        assumenda,
-                        eligendi suscipit consequuntur repudiandae
-                        recusandae
-                        quia.
-                        Recusandae esse ex consequuntur earum officia
-                        mollitia
-                        fugiat.</p>
+                    <p><ul>
+                            <li>
+                                Geboren am 24.04.1987 in Berlin
+                            </li>
+                            <li>verheiratet, 2 Kinder</li>
+                        </ul>
+                        <article class="text-justify">
+                            Es gibt sie doch: <strong>Sportliche Nerds</strong>.
+                            Ich
+                            liebe es Sport
+                            zu treiben um mich mit anderen zu messen aber auch
+                            immer
+                            stärker als Ausgleich zum alltäglichen Leben.
+                            Parallel
+                            hatte ich schon immer eine gewisse <em>"Nerd-Ader"</em>
+                            die sich
+                            für allerlei Computerthematiken, Videospiele und
+                            Smartphonetechnik interessiert. Beruflich bedingt
+                            kam
+                            dann der Faktor Internet und Programmierung immer
+                            stärker dazu und damit der Wunsch Dinge selber zu
+                            erschaffen und zu verändern. Mein Weg führte mich
+                            also
+                            ins Bootcamp um ein <a class="text-light"
+                                href="https://www.neuefische.de/">neuer Fisch</a>
+                            zu
+                            werden.
+                        </article>
+                    </p>
                 </section>
+                <h2 id="cv">Bildungsweg</h2>
+                <list>
+                    <ul class="list-group
+                        list-group-flush mb-3">
+                        <li class="shadow-lg list-group-item"><small>
+                                <b>Seit März 2019</b> <br>Neue Fische GmbH: Web
+                                Developer Bootcamp
+                            </small></li>
+                        <li class="shadow-lg list-group-item
+                            list-group-item-dark"><small>
+                                <b>April 2015 - November 2015</b> <br>TU
+                                Darmstadt: Master of Arts Sportmanagement o.
+                                Abschluss
+                            </small></li>
+                        <li class="shadow-lg list-group-item"><small>
+                                <b>März 2016</b> <br>Veröffentlichung: Journal
+                                of
+                                Sport Sciences, Volume 35, 2017
+                            </small></li>
+                        <li class="shadow-lg list-group-item
+                            list-group-item-dark"><small>
+                                <b>April 2008 - Oktober 2014</b> <br>TU
+                                Kaiserslautern: Bachelor & Master of
+                                Education
+                                Sport/Sozialkunde/Bildungswissenschaften
+                            </small></li>
+                        <li class="shadow-lg list-group-item"><small>
+                                <b>April 2007 - März 2008</b> <br>TU
+                                Kaiserslautern: Bachelor of Science
+                                Informatik o. Abschluss
+                            </small></li>
+                    </ul>
+                </list>
             </div>
             <div class="col-sm">
                 <h2 id="cv">Berufliche Laufbahn</h2>
                 <list>
-                    <ul class="list-group list-group-flush mb-3">
+                    <ul class="list-group list-group-flush
+                        mb-3">
                         <li class="shadow-lg list-group-item"><small>
                                 <b>Januar 2019 - März 2019</b> <br>Zeit mit der
                                 Familie
@@ -185,34 +239,6 @@
                                 <b>Oktober 2011 - März 2015</b> <br>Trainer
                                 Nachwuchsleistungszentrum 1. FC Kaiserslautern
                                 GmbH & Co. KGaA
-                            </small></li>
-                    </ul>
-                </list>
-                <h2 id="cv">Akademische Laufbahn</h2>
-                <list>
-                    <ul class="list-group list-group-flush mb-3">
-                        <li class="shadow-lg list-group-item"><small>
-                                <b>April 2015 - November 2015</b> <br>TU
-                                Darmstadt: Master of Arts Sportmanagement o.
-                                Abschluss
-                            </small></li>
-                        <li class="shadow-lg list-group-item
-                            list-group-item-dark"><small>
-                                <b>März 2016</b> <br>Veröffentlichung: Journal
-                                of
-                                Sport Sciences, Volume 35, 2017
-                            </small></li>
-                        <li class="shadow-lg list-group-item"><small>
-                                <b>April 2008 - Oktober 2014</b> <br>TU
-                                Kaiserslautern: Bachelor & Master of
-                                Education
-                                Sport/Sozialkunde/Bildungswissenschaften
-                            </small></li>
-                        <li class="shadow-lg list-group-item
-                            list-group-item-dark"><small>
-                                <b>April 2007 - März 2008</b> <br>TU
-                                Kaiserslautern: Bachelor of Science
-                                Informatik o. Abschluss
                             </small></li>
                     </ul>
                 </list>
