--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     vorbei zu sehen, da ich die Seite mit Fortschreiten meines
                     Web Developer Kurses weiterentwickeln werde. Viel Spaß
                     beim
-                    stöbern!</p>
+                    Stöbern!</p>
             </section>
             <!--durch row ist es nicht gleich eingerückt wie rest deshalb ml-2-->
             <div class="col-sm">
@@ -105,7 +105,7 @@
                 </a>
             </div>
         </section>
-        <header class="h3 d-flex justify-content-center">Finde me on</header>
+        <header class="h3 d-flex justify-content-center">Find me on</header>
         <section id="teaser" class="d-flex justify-content-around row
             mb-3 p-3">
             <figure><a href="https://codepen.io/ansmann/"><img class="mb-1"
