--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <link rel="stylesheet" href="css/bootstrap.css">
     </head>
     <body class="container-fluid text-dark"
-        background="jj-ying-236821-unsplash.jpg">
+        background="jj-ying-236821-unsplash.jpg" style="background-size: 220%">
         <header id="home" class="mb-5 d-flex row p-3">
             <h1 class="flex-grow-1">Ansgar Reimann</h1>
-            <ul class="nav nav-pills ustify-content-end">
+            <ul class="nav nav-pills justify-content-end">
                 <li class="nav-item">
                     <a class="nav-link active bg-dark text-white shadow"
                         href="http://127.0.0.1:5500/index.html#home">Home</a>
@@ -31,22 +31,22 @@
                 <img class="mb-3 img-fluid"
                     src="https://uonnya.sn.files.1drv.com/y4mOi2pzsUlKByyB1nbRfkLwnZcM7e5HLwuymgGs0mE_-71A9u-ArCY-L5R2l04CQfakPDOKw7C2Eg83-OIbnU9rzizAi0bkgraSL4QDHT0K83Vi2N0rM8kOy2iScsm1XQuZgW_nieQFESAulPgnaTZcUoj0x7UJ6Dg4R77GBOC2lPdY02a9qLvQBD618JxarxRKoKi5XuLEbdtBs2WPQgrgw?width=1024&height=682&cropmode=none"
                     alt="Bild
-                    von mir">
+                    von Ansgar Reimann">
                 <h4>Hallo und Moin</h4>
-                <p class="text-justify">Als Neu-Hamburger und neuer Fisch
+                <article class="text-justify">Als Neu-Hamburger und neuer Fisch
                     begrüße
                     ich euch auf meiner ersten eigenen Seite. Es lohnt sich
                     öfter
                     vorbei zu sehen, da ich die Seite mit Fortschreiten meines
                     Web Developer Kurses weiterentwickeln werde. Viel Spaß
                     beim
-                    Stöbern!</p>
+                    Stöbern!</article>
             </section>
             <!--durch row ist es nicht gleich eingerückt wie rest deshalb ml-2-->
             <div class="col-sm">
-                <h2 id="skills1">Programmierskills</h2>
+                <h2 id="skills">Programmierkenntnisse</h2>
                 <list class="ml-2 mb-3 d-flex">
-                    <ul class="row list-group d-flex
+                    <ul class="list-group row
                         list-group-horizontal">
                         <li class="shadow-lg badge list-inline-item
                             list-group-item-dark text- m-1">Markdown</li>
@@ -57,6 +57,8 @@
                         <li class="shadow-lg badge list-inline-item
                             list-group-item-dark text- m-1">Bootstrap</li>
                         <li class="shadow-lg badge list-inline-item
+                            list-group-item-dark text- m-1">Emmet</li>
+                        <li class="shadow-lg badge list-inline-item
                             list-group-item-dark text- m-1">Soon: CSS/SCSS</li>
                         <li class="shadow-lg badge list-inline-item
                             list-group-item-dark text- m-1">Soon: JavaScript</li>
@@ -64,7 +66,7 @@
                             list-group-item-dark text- m-1">Soon: React</li>
                     </ul>
                 </list>
-                <h2 id="skills2">Interessen</h2>
+                <h2 id="interest">Interessen</h2>
                 <list class="ml-2 mb-3 d-flex">
                     <ul class="row class list-group
                         list-group-horizontal">
@@ -136,64 +138,62 @@
             <div class="col-sm">
                 <h2 id="aboutme">About me</h2>
                 <section class="mb-3">
-                    <p><ul>
-                            <li>
-                                Geboren am 24.04.1987 in Berlin
-                            </li>
-                            <li>verheiratet, 2 Kinder</li>
-                        </ul>
-                        <article class="text-justify">
-                            Es gibt sie doch: <strong>Sportliche Nerds</strong>.
-                            Ich
-                            liebe es Sport
-                            zu treiben um mich mit anderen zu messen aber auch
-                            immer
-                            stärker als Ausgleich zum alltäglichen Leben.
-                            Parallel
-                            hatte ich schon immer eine gewisse <em>"Nerd-Ader"</em>
-                            die sich
-                            für allerlei Computerthematiken, Videospiele und
-                            Smartphonetechnik interessiert. Beruflich bedingt
-                            kam
-                            dann der Faktor Internet und Programmierung immer
-                            stärker dazu und damit der Wunsch Dinge selber zu
-                            erschaffen und zu verändern. Mein Weg führte mich
-                            also
-                            ins Bootcamp um ein <a class="text-light"
-                                href="https://www.neuefische.de/">neuer Fisch</a>
-                            zu
-                            werden.
-                        </article>
-                    </p>
+                    <ul>
+                        <li>
+                            Geboren am 24.04.1987 in Berlin
+                        </li>
+                        <li>verheiratet, 2 Kinder</li>
+                    </ul>
+                    <article class="text-justify">
+                        Es gibt sie doch: <strong>Sportliche Nerds</strong>.
+                        Ich
+                        liebe es Sport
+                        zu treiben um mich mit anderen zu messen aber auch
+                        immer
+                        stärker als Ausgleich zum alltäglichen Leben.
+                        Parallel
+                        hatte ich schon immer eine gewisse <em>"Nerd-Ader"</em>
+                        die sich
+                        für allerlei Computerthematiken, Videospiele und
+                        Smartphonetechnik interessiert. Beruflich bedingt
+                        kam
+                        dann der Faktor Internet und Programmierung immer
+                        stärker dazu und damit der Wunsch Dinge selber zu
+                        erschaffen und zu verändern. Mein Weg führte mich
+                        also
+                        ins Bootcamp um ein <a class="text-light"
+                            href="https://www.neuefische.de/">neuer Fisch</a>
+                        zu
+                        werden.
+                    </article>
                 </section>
-                <h2 id="cv">Bildungsweg</h2>
+                <h2 id="education">Bildungsweg</h2>
                 <list>
-                    <ul class="list-group
-                        list-group-flush mb-3">
+                    <ul class="list-group mb-3">
                         <li class="shadow-lg list-group-item"><small>
                                 <b>Seit März 2019</b> <br>Neue Fische GmbH: Web
                                 Developer Bootcamp
                             </small></li>
                         <li class="shadow-lg list-group-item
                             list-group-item-dark"><small>
-                                <b>April 2015 - November 2015</b> <br>TU
+                                <b>April 2015 - November 2015</b><br>TU
                                 Darmstadt: Master of Arts Sportmanagement o.
                                 Abschluss
                             </small></li>
                         <li class="shadow-lg list-group-item"><small>
-                                <b>März 2016</b> <br>Veröffentlichung: Journal
+                                <b>März 2016</b><br>Veröffentlichung: Journal
                                 of
                                 Sport Sciences, Volume 35, 2017
                             </small></li>
                         <li class="shadow-lg list-group-item
                             list-group-item-dark"><small>
-                                <b>April 2008 - Oktober 2014</b> <br>TU
+                                <b>April 2008 - Oktober 2014</b><br>TU
                                 Kaiserslautern: Bachelor & Master of
                                 Education
                                 Sport/Sozialkunde/Bildungswissenschaften
                             </small></li>
                         <li class="shadow-lg list-group-item"><small>
-                                <b>April 2007 - März 2008</b> <br>TU
+                                <b>April 2007 - März 2008</b><br>TU
                                 Kaiserslautern: Bachelor of Science
                                 Informatik o. Abschluss
                             </small></li>
