header pure css

--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Code to win with AnsMann</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header id="home">
             <h1>Ansgar Reimann</h1>
-            <ul>
-                <li>
+            <ul class="navigation">
+                <li class="navigation-list">
                     <a href="http://127.0.0.1:5500/index.html#home">Home</a>
                 </li>
-                <li>
+                <li class="navigation-list">
                     <a href="http://127.0.0.1:5500/index.html#contact">Kontakt</a>
                 </li>
-                <li>
+                <li class="navigation-list">
                     <a href="http://127.0.0.1:5500/index.html#aboutme">Biografie</a>
                 </li>
             </ul>
         </header>
         <section id="start">
-            <img
+            <img class="profile-pic"
                 src="https://uonnya.sn.files.1drv.com/y4mOi2pzsUlKByyB1nbRfkLwnZcM7e5HLwuymgGs0mE_-71A9u-ArCY-L5R2l04CQfakPDOKw7C2Eg83-OIbnU9rzizAi0bkgraSL4QDHT0K83Vi2N0rM8kOy2iScsm1XQuZgW_nieQFESAulPgnaTZcUoj0x7UJ6Dg4R77GBOC2lPdY02a9qLvQBD618JxarxRKoKi5XuLEbdtBs2WPQgrgw?width=1024&height=682&cropmode=none"
                 alt="Bild
                 von Ansgar Reimann">
