Change Header list to nav

--- a/index.html
+++ b/index.html
@@ -10,17 +10,14 @@
     <body>
         <header id="home">
             <h1>Ansgar Reimann</h1>
-            <ul class="navigation">
-                <li class="navigation-list">
-                    <a href="http://127.0.0.1:5500/index.html#home">Home</a>
-                </li>
-                <li class="navigation-list">
-                    <a href="http://127.0.0.1:5500/index.html#contact">Kontakt</a>
-                </li>
-                <li class="navigation-list">
-                    <a href="http://127.0.0.1:5500/index.html#aboutme">Biografie</a>
-                </li>
-            </ul>
+            <nav class="navigation">
+                <a class="navigation-list"
+                    href="http://127.0.0.1:5500/index.html#home">Home</a>
+                <a class="navigation-list"
+                    href="http://127.0.0.1:5500/index.html#contact">Kontakt</a>
+                <a class="navigation-list"
+                    href="http://127.0.0.1:5500/index.html#aboutme">Biografie</a>
+            </nav>
         </header>
         <section id="start">
             <img class="profile-pic"
