Add header bem classes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header id="home">
-            <h1>Ansgar Reimann</h1>
-            <nav class="navigation">
+        <header class="header" id="home">
+            <h1 class="header__heading">Ansgar Reimann</h1>
+            <nav class="header__nav">
                 <a class="navigation-list"
                     href="http://127.0.0.1:5500/index.html#home">Home</a>
                 <a class="navigation-list"
