Add skills classes

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </section>
         <!--durch row ist es nicht gleich eingerückt wie rest deshalb ml-2-->
         <h2 id="skills">Programmierkenntnisse</h2>
-        <list>
-            <ul>
+        <list class="skills">
+            <ul class="skills__tag-list">
                 <li>Markdown</li>
                 <li>Shell</li>
                 <li>HTML</li>
@@ -50,7 +50,7 @@
         </list>
         <h2 id="interest">Interessen</h2>
         <list>
-            <ul>
+            <ul class="skill__tag-list">
                 <li>Meine Familie</li>
                 <li>Fußball</li>
                 <li>Fahrrad fahren</li>
