--- a/index.html
+++ b/index.html
@@ -1,201 +1,221 @@
 <!DOCTYPE html>
 <html lang="de">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Code to win with AnsMann - skills</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <header class="header" id="home">
-            <h1 class="header__heading">Ansgar Reimann</h1>
-            <nav class="header__nav">
-                <a class="navigation-list"
-                    href="http://127.0.0.1:5500/index.html#home">Home</a>
-                <a class="navigation-list"
-                    href="http://127.0.0.1:5500/index.html#contact">Kontakt</a>
-                <a class="navigation-list"
-                    href="http://127.0.0.1:5500/index.html#aboutme">Biografie</a>
-            </nav>
-        </header>
-        <section id="start">
-            <img class="profile-pic"
-                src="https://uonnya.sn.files.1drv.com/y4mOi2pzsUlKByyB1nbRfkLwnZcM7e5HLwuymgGs0mE_-71A9u-ArCY-L5R2l04CQfakPDOKw7C2Eg83-OIbnU9rzizAi0bkgraSL4QDHT0K83Vi2N0rM8kOy2iScsm1XQuZgW_nieQFESAulPgnaTZcUoj0x7UJ6Dg4R77GBOC2lPdY02a9qLvQBD618JxarxRKoKi5XuLEbdtBs2WPQgrgw?width=1024&height=682&cropmode=none"
-                alt="Bild
-                von Ansgar Reimann">
-            <h4>Hallo und Moin</h4>
-            <article>Als Neu-Hamburger und neuer Fisch
-                begrüße
-                ich euch auf meiner ersten eigenen Seite. Es lohnt sich
-                öfter
-                vorbei zu sehen, da ich die Seite mit Fortschreiten meines
-                Web Developer Kurses weiterentwickeln werde. Viel Spaß
-                beim
-                Stöbern!</article>
-        </section>
-        <!--durch row ist es nicht gleich eingerückt wie rest deshalb ml-2-->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Code to win with AnsMann - skills</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header id="home">
+      <h1>Ansgar Reimann</h1>
+      <nav class="navigation">
+        <a class="navigation-list" href="http://127.0.0.1:5500/index.html#home"
+          >Home</a
+        >
+        <a
+          class="navigation-list"
+          href="http://127.0.0.1:5500/index.html#contact"
+          >Kontakt</a
+        >
+        <a
+          class="navigation-list"
+          href="http://127.0.0.1:5500/index.html#aboutme"
+          >Biografie</a
+        >
+      </nav>
+    </header>
+    <div class="block-1">
+      <section class="section-welcome" id="start">
+        <img
+          class="profile-pic"
+          src="https://uonnya.sn.files.1drv.com/y4mOi2pzsUlKByyB1nbRfkLwnZcM7e5HLwuymgGs0mE_-71A9u-ArCY-L5R2l04CQfakPDOKw7C2Eg83-OIbnU9rzizAi0bkgraSL4QDHT0K83Vi2N0rM8kOy2iScsm1XQuZgW_nieQFESAulPgnaTZcUoj0x7UJ6Dg4R77GBOC2lPdY02a9qLvQBD618JxarxRKoKi5XuLEbdtBs2WPQgrgw?width=1024&height=682&cropmode=none"
+          alt="Bild
+                von Ansgar Reimann"
+        />
+        <h4>Hallo und Moin</h4>
+        <article>
+          Als Neu-Hamburger und neuer Fisch begrüße ich euch auf meiner ersten
+          eigenen Seite. Es lohnt sich öfter vorbei zu sehen, da ich die Seite
+          mit Fortschreiten meines Web Developer Kurses weiterentwickeln werde.
+          Viel Spaß beim Stöbern!
+        </article>
+      </section>
+      <!--durch row ist es nicht gleich eingerückt wie rest deshalb ml-2-->
+      <section class="section-skill-interests">
         <h2 id="skills">Programmierkenntnisse</h2>
-        <list class="skills">
-            <ul class="skills__tag-list">
-                <li>Markdown</li>
-                <li>Shell</li>
-                <li>HTML</li>
-                <li>Bootstrap</li>
-                <li>Emmet</li>
-                <li>Soon: CSS/SCSS</li>
-                <li>Soon: JavaScript</li>
-                <li>Soon: React</li>
-            </ul>
+        <list>
+          <ul class="skill__tag-list">
+            <li>Markdown</li>
+            <li>Shell</li>
+            <li>HTML</li>
+            <li>Bootstrap</li>
+            <li>Emmet</li>
+            <li>Soon: CSS/SCSS</li>
+            <li>Soon: JavaScript</li>
+            <li>Soon: React</li>
+          </ul>
         </list>
         <h2 id="interest">Interessen</h2>
         <list>
-            <ul class="skill__tag-list">
-                <li>Meine Familie</li>
-                <li>Fußball</li>
-                <li>Fahrrad fahren</li>
-                <li>Ski fahren</li>
-                <li>Klettern</li>
-                <li>Programmieren</li>
-                <li>Technik</li>
-                <li>Videospiele</li>
-            </ul>
+          <ul class="skill__tag-list">
+            <li>Meine Familie</li>
+            <li>Fußball</li>
+            <li>Fahrrad fahren</li>
+            <li>Ski fahren</li>
+            <li>Klettern</li>
+            <li>Programmieren</li>
+            <li>Technik</li>
+            <li>Videospiele</li>
+          </ul>
         </list>
-        <section id="contact">
-            <h3>Contact me:</h3>
-            <h3>Phone</h3>
-            <a href="tel:+4915124062234"><u>0151/24062234</u></a>
-            <h3>E-Mail</h3>
-            <a href="mailto:ansgar.reimann@protonmail.com">
-                <u>ansgar.reimann@protonmail.com</u>
-            </a>
-        </section>
-        <header>Find me on</header>
-        <section id="teaser">
-            <figure>
-                <a href="https://codepen.io/ansmann/">
-                    <img src="codepen-logo.png" alt="Codepen logo"
-                        style="max-width: 120px">
-                </a>
-                <figcaption>
-                    <a href="https://codepen.io/ansmann/">CodePen</a>
-                </figcaption>
-            </figure>
-            <figure>
-                <a href="https://github.com/AnsMann/"><img class="mb-1"
-                        src="GitHub-Mark-120px-plus.png"
-                        alt="github logo"></a>
-                <figcaption class="d-flex justify-content-center"><a
-                        class="text-dark"
-                        href="https://github.com/AnsMann/">GitHub</a></figcaption>
-            </figure>
-            <figure><a href="https://www.xing.com/profile/Ansgar_Reimann"><img
-                        class="mb-1"
-                        src="xing-logo-black-white.png"
-                        alt="XING" style="max-width: 120px"></a>
-                <figcaption><a
-                        href="https://www.xing.com/profile/Ansgar_Reimann">XING</a></figcaption>
-            </figure>
-        </section>
-        <h2 id="aboutme">About me</h2>
-        <section>
-            <ul>
-                <li>
-                    Geboren am 24.04.1987 in Berlin
-                </li>
-                <li>verheiratet, 2 Kinder</li>
-            </ul>
-            <article>
-                Es gibt sie doch: <strong>Sportliche Nerds</strong>.
-                Ich
-                liebe es Sport
-                zu treiben um mich mit anderen zu messen aber auch
-                immer
-                stärker als Ausgleich zum alltäglichen Leben.
-                Parallel
-                hatte ich schon immer eine gewisse <em>"Nerd-Ader"</em>
-                die sich
-                für allerlei Computerthematiken, Videospiele und
-                Smartphonetechnik interessiert. Beruflich bedingt
-                kam
-                dann der Faktor Internet und Programmierung immer
-                stärker dazu und damit der Wunsch Dinge selber zu
-                erschaffen und zu verändern. Mein Weg führte mich
-                also
-                ins Bootcamp um ein <a
-                    href="https://www.neuefische.de/">neuer Fisch</a>
-                zu
-                werden.
-            </article>
-        </section>
-        <h2 id="education">Bildungsweg</h2>
-        <list>
-            <ul>
-                <li><small>
-                        <b>Seit März 2019</b> <br>Neue Fische GmbH: Web
-                        Developer Bootcamp
-                    </small></li>
-                <li><small>
-                        <b>April 2015 - November 2015</b><br>TU
-                        Darmstadt: Master of Arts Sportmanagement o.
-                        Abschluss
-                    </small></li>
-                <li><small>
-                        <b>März 2016</b><br>Veröffentlichung: Journal
-                        of
-                        Sport Sciences, Volume 35, 2017
-                    </small></li>
-                <li><small>
-                        <b>April 2008 - Oktober 2014</b><br>TU
-                        Kaiserslautern: Bachelor & Master of
-                        Education
-                        Sport/Sozialkunde/Bildungswissenschaften
-                    </small></li>
-                <li><small>
-                        <b>April 2007 - März 2008</b><br>TU
-                        Kaiserslautern: Bachelor of Science
-                        Informatik o. Abschluss
-                    </small></li>
-            </ul>
-        </list>
-        <h2 id="cv">Berufliche Laufbahn</h2>
-        <list>
-            <ul>
-                <li><small>
-                        <b>Januar 2019 - März 2019</b> <br>Zeit mit der
-                        Familie
-                        verbringen
-                    </small></li>
-                <li><small>
-                        <b>April 2018 - Dezember 2018</b> <br>E-Commerce
-                        Manager
-                        Fon3 GmbH
-                    </small></li>
-                <li><small>
-                        <b>Februar 2018 - April 2018</b> <br>Arbeit
-                        suchend
-                    </small></li>
-                <li><small>
-                        <b>November 2015 - Januar 2018</b> <br>E-Commerce
-                        Manager
-                        Genuine Peak Sarl
-                    </small></li>
-                <li><small>
-                        <b>April 2015 - November 2015</b> <br>Nachwuchsscout
-                        1. FC Kaiserslautern GmbH & Co. KGaA
-                    </small></li>
-                <li><small>
-                        <b>Oktober 2014 - Oktober 2015</b> <br>Plattform
-                        Manager DAW/DTW Logstocks GmbH
-                    </small></li>
-                <li><small>
-                        <b>Oktober 2011 - März 2015</b> <br>Trainer
-                        Nachwuchsleistungszentrum 1. FC Kaiserslautern
-                        GmbH & Co. KGaA
-                    </small></li>
-            </ul>
-        </list>
-        <hr>
-        <footer><small>&copy; 2019 AnsMann</small></footer>
-    </body>
+      </section>
+    </div>
+    <section id="contact">
+      <h3>Contact me:</h3>
+      <h3>Phone</h3>
+      <a href="tel:+4915124062234"><u>0151/24062234</u></a>
+      <h3>E-Mail</h3>
+      <a href="mailto:ansgar.reimann@protonmail.com">
+        <u>ansgar.reimann@protonmail.com</u>
+      </a>
+    </section>
+    <header>Find me on</header>
+    <section id="teaser">
+      <figure>
+        <a href="https://codepen.io/ansmann/">
+          <img
+            src="codepen-logo.png"
+            alt="Codepen logo"
+            style="max-width: 120px"
+          />
+        </a>
+        <figcaption>
+          <a href="https://codepen.io/ansmann/">CodePen</a>
+        </figcaption>
+      </figure>
+      <figure>
+        <a href="https://github.com/AnsMann/"
+          ><img class="mb-1" src="GitHub-Mark-120px-plus.png" alt="github logo"
+        /></a>
+
+        <figcaption class="d-flex justify-content-center">
+          <a class="text-dark" href="https://github.com/AnsMann/">GitHub</a>
+        </figcaption>
+      </figure>
+      <figure>
+        <a href="https://www.xing.com/profile/Ansgar_Reimann"
+          ><img
+            class="mb-1"
+            src="xing-logo-black-white.png"
+            alt="XING"
+            style="max-width: 120px"
+        /></a>
+
+        <figcaption>
+          <a href="https://www.xing.com/profile/Ansgar_Reimann">XING</a>
+        </figcaption>
+      </figure>
+    </section>
+    <h2 id="aboutme">About me</h2>
+    <section>
+      <ul>
+        <li>
+          Geboren am 24.04.1987 in Berlin
+        </li>
+        <li>verheiratet, 2 Kinder</li>
+      </ul>
+      <article>
+        Es gibt sie doch: <strong>Sportliche Nerds</strong>. Ich liebe es Sport
+        zu treiben um mich mit anderen zu messen aber auch immer stärker als
+        Ausgleich zum alltäglichen Leben. Parallel hatte ich schon immer eine
+        gewisse <em>"Nerd-Ader"</em> die sich für allerlei Computerthematiken,
+        Videospiele und Smartphonetechnik interessiert. Beruflich bedingt kam
+        dann der Faktor Internet und Programmierung immer stärker dazu und damit
+        der Wunsch Dinge selber zu erschaffen und zu verändern. Mein Weg führte
+        mich also ins Bootcamp um ein
+        <a href="https://www.neuefische.de/">neuer Fisch</a>
+        zu werden.
+      </article>
+    </section>
+    <h2 id="education">Bildungsweg</h2>
+    <list>
+      <ul>
+        <li>
+          <small>
+            <b>Seit März 2019</b> <br />Neue Fische GmbH: Web Developer Bootcamp
+          </small>
+        </li>
+        <li>
+          <small>
+            <b>April 2015 - November 2015</b><br />TU Darmstadt: Master of Arts
+            Sportmanagement o. Abschluss
+          </small>
+        </li>
+        <li>
+          <small>
+            <b>März 2016</b><br />Veröffentlichung: Journal of Sport Sciences,
+            Volume 35, 2017
+          </small>
+        </li>
+        <li>
+          <small>
+            <b>April 2008 - Oktober 2014</b><br />TU Kaiserslautern: Bachelor &
+            Master of Education Sport/Sozialkunde/Bildungswissenschaften
+          </small>
+        </li>
+        <li>
+          <small>
+            <b>April 2007 - März 2008</b><br />TU Kaiserslautern: Bachelor of
+            Science Informatik o. Abschluss
+          </small>
+        </li>
+      </ul>
+    </list>
+    <h2 id="cv">Berufliche Laufbahn</h2>
+    <list>
+      <ul>
+        <li>
+          <small>
+            <b>Januar 2019 - März 2019</b> <br />Zeit mit der Familie verbringen
+          </small>
+        </li>
+        <li>
+          <small>
+            <b>April 2018 - Dezember 2018</b> <br />E-Commerce Manager Fon3 GmbH
+          </small>
+        </li>
+        <li>
+          <small> <b>Februar 2018 - April 2018</b> <br />Arbeit suchend </small>
+        </li>
+        <li>
+          <small>
+            <b>November 2015 - Januar 2018</b> <br />E-Commerce Manager Genuine
+            Peak Sarl
+          </small>
+        </li>
+        <li>
+          <small>
+            <b>April 2015 - November 2015</b> <br />Nachwuchsscout 1. FC
+            Kaiserslautern GmbH & Co. KGaA
+          </small>
+        </li>
+        <li>
+          <small>
+            <b>Oktober 2014 - Oktober 2015</b> <br />Plattform Manager DAW/DTW
+            Logstocks GmbH
+          </small>
+        </li>
+        <li>
+          <small>
+            <b>Oktober 2011 - März 2015</b> <br />Trainer
+            Nachwuchsleistungszentrum 1. FC Kaiserslautern GmbH & Co. KGaA
+          </small>
+        </li>
+      </ul>
+    </list>
+    <hr />
+    <footer><small>&copy; 2019 AnsMann</small></footer>
+  </body>
 </html>
